--- a/pds.bib
+++ b/pds.bib
@@ -4276,6 +4276,14 @@ Publisher: Open Library of Humanities},
   address={New York}
 }
 
+@book{chomsky_syntactic_1957,
+	address = {The Hague/Paris},
+	title = {Syntactic {Structures}},
+	publisher = {Mouton \& Co.},
+	author = {Chomsky, Noam},
+	year = {1957},
+}
+
 @book{schütze_gramaticality_2016,
     author = {Schütze, Carson T.},
     title = {The empirical base of linguistics},
